<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding = "15dp">

    <TextView
        android:id="@+id/eventEditor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/event_editor"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editEventName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/enter_event_name" />

    <EditText
        android:id="@+id/editAge"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:inputType="number"
        android:hint="@string/enter_age" />

    <EditText
        android:id="@+id/editPace"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/enter_pace" />

    <EditText
        android:id="@+id/editLevel"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/enter_level" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonUpdateProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Update" />

        <Button
            android:id="@+id/buttonDeleteProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete" />

    </LinearLayout>


</LinearLayout>