<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".organizer.OrganizerActivity">

    <!-- Guideline to center vertically -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalGuideline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <!-- TextView for the Organizer header -->
    <TextView
        android:id="@+id/Organizer"
        android:text="@string/organizer"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_below="@id/verticalGuideline" />

    <!-- Button for My Profile Information -->
    <Button
        android:id="@+id/myProfileInformation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_profile_information"
        android:layout_below="@id/Organizer"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true" />

    <!-- Button for Create Profile -->
    <Button
        android:id="@+id/createProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_profile"
        android:layout_below="@id/myProfileInformation"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true" />

    <!-- Button for Create Event -->
    <Button
        android:id="@+id/createEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_event"
        android:layout_below="@id/createProfile"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true" />

    <!-- New Button for My Event -->
    <Button
        android:id="@+id/myEvents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="My Events"
        android:layout_below="@id/createEvent"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true" />

    <!-- Button for Logout -->
    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:layout_below="@id/myEvents"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp" />

</RelativeLayout>
