<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".participant.ParticipantActivity">

    <TextView
        android:id="@+id/Participant"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/participant"
        android:textColor="@color/black"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/Participant"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:visibility="gone"
        android:text="@string/all_events"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/customSearchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Participant"
        android:layout_alignParentEnd="true"
        app:queryHint="@string/event_type"
        app:searchHintIcon="@null"
        app:iconifiedByDefault="true"
        android:layoutDirection="rtl"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp" >

    </androidx.appcompat.widget.SearchView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/user_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/logout"
        android:layout_below="@+id/customSearchView"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        tools:listitem="@layout/user_events_list" />

    <Button

        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:text="@string/logout" />
</RelativeLayout>