<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.AdminActivity">
    <TextView
        android:id="@+id/Admin"
        android:text="@string/admin"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:textSize="30dp"
        android:layout_width="wrap_content"
        android:layout_height="40dp"/>

    <Button
        android:id="@+id/addEventType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="-3dp"
        android:layout_marginEnd="-2dp"
        android:layout_marginBottom="8dp"
        android:text="@string/add_event"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="8dp"
        android:text="@string/logout" />


    <Space
        android:id="@+id/space"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_below="@id/addEventType"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/space"
        android:textSize="20dp"
        android:padding="6dp"
        android:text="Events:" />

    <ListView
        android:id="@+id/listViewEvents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:layout_below="@+id/textView">
    </ListView>


</RelativeLayout>